--- a/index.html
+++ b/index.html
@@ -145,25 +145,32 @@
               <ul class="reset-ul command-ul">
                 <li class="command-li">
                   <a href="" class="feutures-icon">
-                    <svg width="20" height="20">
+                    <svg class="feautures-icon-svg" width="20" height="20">
                       <use href="./images/symbol-defs.svg#icon-instagram"></use>
                     </svg>
                   </a>
                 </li>
-                <li class="command-li">
-                  <svg class="feutures-icon" width="20" height="20">
-                    <use href="./images/symbol-defs.svg#icon-twitter"></use>
-                  </svg>
                 </li>
                 <li class="command-li">
-                  <svg class="feutures-icon" width="20" height="20">
-                    <use href="./images/symbol-defs.svg#icon-facebook"></use>
-                  </svg>
+                  <a href="" class="feutures-icon">
+                    <svg class="feautures-icon-svg" width="20" height="20">
+                      <use href="./images/symbol-defs.svg#icon-twitter"></use>
+                    </svg>
+                  </a>
                 </li>
                 <li class="command-li">
-                  <svg class="feutures-icon" width="20" height="20">
-                    <use href="./images/symbol-defs.svg#icon-linkedin"></use>
-                  </svg>
+                  <a href="" class="feutures-icon">
+                    <svg class="feautures-icon-svg" width="20" height="20">
+                      <use href="./images/symbol-defs.svg#icon-facebook"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="command-li">
+                  <a href="" class="feutures-icon">
+                    <svg class="feautures-icon-svg" width="20" height="20">
+                      <use href="./images/symbol-defs.svg#icon-linkedin"></use>
+                    </svg>
+                  </a>
                 </li>
               </ul>
             </li>
@@ -173,81 +180,108 @@
               <p class="text-it" lang="en">Frontend Developer</p>
               <ul class="reset-ul command-ul">
                 <li class="command-li">
-                  <svg class="feutures-icon" width="20" height="20">
-                    <use href="./images/symbol-defs.svg#icon-instagram"></use>
-                  </svg>
+                  <a href="" class="feutures-icon">
+                    <svg class="feautures-icon-svg" width="20" height="20">
+                      <use href="./images/symbol-defs.svg#icon-instagram"></use>
+                    </svg>
+                  </a>
+                </li>
                 </li>
                 <li class="command-li">
-                  <svg class="feutures-icon" width="20" height="20">
-                    <use href="./images/symbol-defs.svg#icon-twitter"></use>
-                  </svg>
+                  <a href="" class="feutures-icon">
+                    <svg class="feautures-icon-svg" width="20" height="20">
+                      <use href="./images/symbol-defs.svg#icon-twitter"></use>
+                    </svg>
+                  </a>
                 </li>
                 <li class="command-li">
-                  <svg class="feutures-icon" width="20" height="20">
-                    <use href="./images/symbol-defs.svg#icon-facebook"></use>
-                  </svg>
+                  <a href="" class="feutures-icon">
+                    <svg class="feautures-icon-svg" width="20" height="20">
+                      <use href="./images/symbol-defs.svg#icon-facebook"></use>
+                    </svg>
+                  </a>
                 </li>
                 <li class="command-li">
-                  <svg class="feutures-icon" width="20" height="20">
-                    <use href="./images/symbol-defs.svg#icon-linkedin"></use>
-                  </svg>
+                  <a href="" class="feutures-icon">
+                    <svg class="feautures-icon-svg" width="20" height="20">
+                      <use href="./images/symbol-defs.svg#icon-linkedin"></use>
+                    </svg>
+                  </a>
                 </li>
-              </ul>
-            </li>
+                </ul>
+                </li>
             <li class="possibles-li">
               <img src="./images/it3.jpg" alt="Николай Тарасов" width="270" />
               <h3 class="black-it">Николай Тарасов</h3>
               <p class="text-it" lang="en">Marketing</p>
               <ul class="reset-ul command-ul">
                 <li class="command-li">
-                  <svg class="feutures-icon" width="20" height="20">
-                    <use href="./images/symbol-defs.svg#icon-instagram"></use>
-                  </svg>
+                  <a href="" class="feutures-icon">
+                    <svg class="feautures-icon-svg" width="20" height="20">
+                      <use href="./images/symbol-defs.svg#icon-instagram"></use>
+                    </svg>
+                  </a>
+                </li>
                 </li>
                 <li class="command-li">
-                  <svg class="feutures-icon" width="20" height="20">
-                    <use href="./images/symbol-defs.svg#icon-twitter"></use>
-                  </svg>
+                  <a href="" class="feutures-icon">
+                    <svg class="feautures-icon-svg" width="20" height="20">
+                      <use href="./images/symbol-defs.svg#icon-twitter"></use>
+                    </svg>
+                  </a>
                 </li>
                 <li class="command-li">
-                  <svg class="feutures-icon" width="20" height="20">
-                    <use href="./images/symbol-defs.svg#icon-facebook"></use>
-                  </svg>
+                  <a href="" class="feutures-icon">
+                    <svg class="feautures-icon-svg" width="20" height="20">
+                      <use href="./images/symbol-defs.svg#icon-facebook"></use>
+                    </svg>
+                  </a>
                 </li>
                 <li class="command-li">
-                  <svg class="feutures-icon" width="20" height="20">
-                    <use href="./images/symbol-defs.svg#icon-linkedin"></use>
-                  </svg>
+                  <a href="" class="feutures-icon">
+                    <svg class="feautures-icon-svg" width="20" height="20">
+                      <use href="./images/symbol-defs.svg#icon-linkedin"></use>
+                    </svg>
+                  </a>
                 </li>
-              </ul>
-            </li>
+                </ul>
+                </li>
             <li class="possibles-li">
               <img src="./images/it4.jpg" alt="Михаил Ермаков" width="270" />
               <h3 class="black-it">Михаил Ермаков</h3>
               <p class="text-it" lang="en">UI Designer</p>
               <ul class="reset-ul command-ul">
                 <li class="command-li">
-                  <svg class="feutures-icon" width="20" height="20">
-                    <use href="./images/symbol-defs.svg#icon-instagram"></use>
-                  </svg>
+                  <a href="" class="feutures-icon">
+                    <svg class="feautures-icon-svg" width="20" height="20">
+                      <use href="./images/symbol-defs.svg#icon-instagram"></use>
+                    </svg>
+                  </a>
+                </li>
                 </li>
                 <li class="command-li">
-                  <svg class="feutures-icon" width="20" height="20">
-                    <use href="./images/symbol-defs.svg#icon-twitter"></use>
-                  </svg>
+                  <a href="" class="feutures-icon">
+                    <svg class="feautures-icon-svg" width="20" height="20">
+                      <use href="./images/symbol-defs.svg#icon-twitter"></use>
+                    </svg>
+                  </a>
                 </li>
                 <li class="command-li">
-                  <svg class="feutures-icon" width="20" height="20">
-                    <use href="./images/symbol-defs.svg#icon-facebook"></use>
-                  </svg>
+                  <a href="" class="feutures-icon">
+                    <svg class="feautures-icon-svg" width="20" height="20">
+                      <use href="./images/symbol-defs.svg#icon-facebook"></use>
+                    </svg>
+                  </a>
                 </li>
                 <li class="command-li">
-                  <svg class="feutures-icon" width="20" height="20">
-                    <use href="./images/symbol-defs.svg#icon-linkedin"></use>
-                  </svg>
+                  <a href="" class="feutures-icon">
+                    <svg class="feautures-icon-svg" width="20" height="20">
+                      <use href="./images/symbol-defs.svg#icon-linkedin"></use>
+                    </svg>
+                  </a>
                 </li>
-              </ul>
-            </li>
+                </ul>
+                </li>
           </ul>
         </div>
       </section>
