--- a/index.html
+++ b/index.html
@@ -291,7 +291,7 @@
           <ul class="client-ul reset-ul">
             <li class="client-li">
               <a href="" class="client-link">
-                <svg class="client-svg" width="44.27" height="49.23">
+                <svg width="44.27" height="49.23">
                   <use href="./images/symbol-defs.svg#icon-logo1"></use>
                 </svg>
               </a>
@@ -308,59 +308,87 @@
                 <svg width="41" height="42.6">
                   <use href="./images/symbol-defs.svg#icon-logo3"></use>
                 </svg>
-              <a/>
+              </a>
             </li>
             <li class="client-li">
               <a href="" class="client-link">
                 <svg width="79.66" height="42.02">
                   <use href="./images/symbol-defs.svg#icon-logo4"></use>
                 </svg>
-              <a/>
+              </a>
             </li>
             <li class="client-li">
               <a href="" class="client-link">
                 <svg width="59" height="47">
                   <use href="./images/symbol-defs.svg#icon-logo5"></use>
                 </svg>
-              <a/>
+              </a>
             </li>
             <li class="client-li">
               <a href="" class="client-link">
                 <svg width="88.48" height="45.44">
                   <use href="./images/symbol-defs.svg#icon-logo6"></use>
-                <a/>
-              </svg>
+                </svg>
+              </a>
             </li>
           </ul>
         </div>
       </section>
     </main>
-    <footer>
-      <div class="container-footer">
-        <div class="podval-logo">
+    <footer class="footer">
+      <section class="container">
           <a href="./index.html" class="podval-logo reset-link"
             ><span class="logo-color">Web</span> studio</a>
-        </div>
-        <div class="podval-container">
+          <address>
           <ul class="podval-contacts reset-ul">
-            <li>
-              <address class="podval-addres reset-link">
+            <li class="podval-addres reset-link">
                 г. Киев, пр-т Леси Украинки, 26
-              </address>
             </li>
             <li>
               <a href="mailto:info@example.com" class="podval-list reset-link"
-                >info@example.com</a
-              >
+                >info@example.com</a>
             </li>
             <li>
               <a href="tel:+380991111111" class="podval-list reset-link"
-                >+38 099 111 11 11</a
-              >
+                >+38 099 111 11 11</a>
             </li>
           </ul>
-        </div>
-      </div>
+          </address>
+          <div class="margin69">
+            <b class="podval-addres">Присоединяйтесь</b>
+          <ul class="social reset-ul">
+            <li class="command-li">
+              <a href="" class="footer-icon">
+                <svg class="footer-icon-svg" width="20" height="20">
+                  <use href="./images/symbol-defs.svg#icon-instagram"></use>
+                </svg>
+              </a>
+            </li>
+            </li>
+            <li class="command-li">
+              <a href="" class="footer-icon">
+                <svg class="feautures-icon-svg" width="20" height="20">
+                  <use href="./images/symbol-defs.svg#icon-twitter"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="command-li">
+              <a href="" class="footer-icon">
+                <svg class="feautures-icon-svg" width="20" height="20">
+                  <use href="./images/symbol-defs.svg#icon-facebook"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="command-li">
+              <a href="" class="footer-icon">
+                <svg class="feautures-icon-svg" width="20" height="20">
+                  <use href="./images/symbol-defs.svg#icon-linkedin"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+          </div>
+      </section>
     </footer>
   </body>
 </html>
