--- a/portfolio.html
+++ b/portfolio.html
@@ -1,54 +1,57 @@
 <!DOCTYPE html>
 <html lang="ru">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@500;700;900&display=swap" rel="stylesheet" />
-    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&display=swap" rel="stylesheet" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/0.7.0/modern-normalize.min.css" />
-    <link rel="stylesheet" href="reset.css" />
-    <link rel="stylesheet" href="styles.css" />
-    <link rel="stylesheet" href="./css/style.css" />
 
-    <title>Портфолио</title>
-  </head>
-  <body>
-    <header>
-      <nav>
-        <div class="container">
-          <div class="nav-main">
-            <a href="./index.html" class="logo reset-link"><span class="logo-color">Web</span> studio</a>
-            <ul class="ul reset-ul">
-              <li class="nav-items">
-                <a href="" class="link reset-link">Студия</a>
-              </li>
-              <li class="nav-items">
-                <a href="./portfolio.html" class="link reset-link">Портфолио</a>
-              </li>
-              <li class="nav-items">
-                <a href="" class="link reset-link">Контакты</a>
-              </li>
-            </ul>
-            <ul class="ul-contact reset-ul">
-              <li class="contacts-li">
-                <a href="mailto:info@devstudio.com" class="contacts reset-link">
-                  <svg class="contacts-svg" width="16px" height="12px">
-                    <use href="./images/symbol-defs.svg#icon-email"></use>
-                  </svg>info@devstudio.com</a>
-              </li>
-              <li class="contacts-li">
-                <a href="tel:+380961111111" class="contacts reset-link"><svg class="contacts-svg" width="16px"
-                    height="12px">
-                    <use href="./images/symbol-defs.svg#icon-smartphone"></use>
-                  </svg>+38 096 111 11 11
-                </a>
-              </li>
-            </ul>
-          </div>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@500;700;900&display=swap" rel="stylesheet" />
+  <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&display=swap" rel="stylesheet" />
+  <link rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/0.7.0/modern-normalize.min.css" />
+  <link rel="stylesheet" href="reset.css" />
+  <link rel="stylesheet" href="styles.css" />
+  <link rel="stylesheet" href="./css/style.css" />
+
+  <title>Портфолио</title>
+</head>
+
+<body>
+  <header>
+    <nav>
+      <div class="container">
+        <div class="nav-main">
+          <a href="./index.html" class="logo reset-link"><span class="logo-color">Web</span> studio</a>
+          <ul class="ul reset-ul">
+            <li class="nav-items">
+              <a href="" class="link reset-link">Студия</a>
+            </li>
+            <li class="nav-items">
+              <a href="./portfolio.html" class="link reset-link">Портфолио</a>
+            </li>
+            <li class="nav-items">
+              <a href="" class="link reset-link">Контакты</a>
+            </li>
+          </ul>
+          <ul class="ul-contact reset-ul">
+            <li class="contacts-li">
+              <a href="mailto:info@devstudio.com" class="contacts reset-link">
+                <svg class="contacts-svg" width="16px" height="12px">
+                  <use href="./images/symbol-defs.svg#icon-email"></use>
+                </svg>info@devstudio.com</a>
+            </li>
+            <li class="contacts-li">
+              <a href="tel:+380961111111" class="contacts reset-link"><svg class="contacts-svg" width="16px"
+                  height="12px">
+                  <use href="./images/symbol-defs.svg#icon-smartphone"></use>
+                </svg>+38 096 111 11 11
+              </a>
+            </li>
+          </ul>
         </div>
-      </nav>
-    </header>
-    <section>
+      </div>
+    </nav>
+  </header>
+  <section>
     <main>
       <div class="container-portfolio">
         <h1 class="visually-hidden">Наши работы</h1>
@@ -69,95 +72,96 @@
             <a href="" class="link-p reset-link">Маркетинг</a>
           </li>
         </ul>
-          <ul class="work reset-ul">
-            <li class="work-item">
-              <img src="./images/img1.jpg" alt="Технокряк" width="370" />
-              <div class="marg">
+        <ul class="work reset-ul">
+          <li class="work-item">
+            <img src="./images/img1.jpg" alt="Технокряк" width="370" />
+            <div class="marg">
               <h3 class="black">Технокряк</h3>
               <h4 class="work-text">Веб-сайт</h4>
-              </div>
-            </li>
-            <li class="work-item">
-              <img src="./images/img2.jpg" alt="Баскетбол" width="370" />
-              <div class="marg">
+            </div>
+          </li>
+          <li class="work-item">
+            <img src="./images/img2.jpg" alt="Баскетбол" width="370" />
+            <div class="marg">
               <h3 class="black">Постер New Orlean vs Golden Star</h3>
               <h4 class="work-text">Дизайн</h4>
-              </div>
-            </li>
-            <li class="work-item">
-              <img src="./images/img3.jpg" alt="Ресторан" width="370" />
-              <div class="marg">
+            </div>
+          </li>
+          <li class="work-item">
+            <img src="./images/img3.jpg" alt="Ресторан" width="370" />
+            <div class="marg">
               <h3 class="black">Ресторан Seafood</h3>
               <h4 class="work-text">Приложение</h4>
-              </div>
-            </li>
-            <li class="work-item">
-              <img src="./images/img4.jpg" alt="Наушники" width="370" />
-              <div class="marg">
+            </div>
+          </li>
+          <li class="work-item">
+            <img src="./images/img4.jpg" alt="Наушники" width="370" />
+            <div class="marg">
               <h3 class="black">Проект Prime</h3>
               <h4 class="work-text">Маркетинг</h4>
-              </div>
-            </li>
-            <li class="work-item">
-              <img src="./images/img5.jpg" alt="Коробки" width="370" />
-              <div class="marg">
+            </div>
+          </li>
+          <li class="work-item">
+            <img src="./images/img5.jpg" alt="Коробки" width="370" />
+            <div class="marg">
               <h3 class="black">Проект Boxes</h3>
               <h4 class="work-text">Приложение</h4>
-              <div/>
-            </li>
-            <li class="work-item">
-              <img src="./images/img6.jpg" alt="Монитор" width="370" />
-              <div class="marg">
+              <div />
+          </li>
+          <li class="work-item">
+            <img src="./images/img6.jpg" alt="Монитор" width="370" />
+            <div class="marg">
               <h3 class="black">Inspiration has no Borders</h3>
               <h4 class="work-text">Веб-сайт</h4>
-              <div/>
-            </li>
-            <li class="work-item">
-              <img src="./images/img7.jpg" alt="Книга" width="370" />
-              <div class="marg">
+              <div />
+          </li>
+          <li class="work-item">
+            <img src="./images/img7.jpg" alt="Книга" width="370" />
+            <div class="marg">
               <h3 class="black">Издание Limited Edition</h3>
               <h4 class="work-text">Дизайн</h4>
-              <div/>
-            </li>
-            <li class="work-item">
-              <img src="./images/img8.jpg" alt="Лейбл" width="370" />
-              <div class="marg">
+              <div />
+          </li>
+          <li class="work-item">
+            <img src="./images/img8.jpg" alt="Лейбл" width="370" />
+            <div class="marg">
               <h3 class="black">Проект LAB</h3>
               <h4 class="work-text">Маркетинг</h4>
-              <div/>
-            </li>
-            <li class="work-item">
-              <img src="./images/img9.jpg" alt="Ноутбук" width="370" />
-              <div class="marg">
+              <div />
+          </li>
+          <li class="work-item">
+            <img src="./images/img9.jpg" alt="Ноутбук" width="370" />
+            <div class="marg">
               <h3 class="black">Growing Business</h3>
               <h4 class="work-text">Приложение</h4>
-              <div/>
-            </li>
-          </ul>
-        </section>
+              <div />
+          </li>
+        </ul>
+  </section>
+  </div>
+  </main>
+  <footer class="podval">
+    <div class="container">
+      <div class="podval-logo">
+        <a href="./index.html" class="podval-logo reset-link"><span class="logo-color">Web</span> studio</a>
       </div>
-    </main>
-    <footer class="podval">
-      <div class="container">
-        <div class="podval-logo">
-          <a href="./index.html" class="podval-logo reset-link"><span class="logo-color">Web</span> studio</a>
-        </div>
-        <div class="podval-container">
-          <ul class="podval-contacts reset-ul">
-            <li>
-              <address class="podval-addres reset-link">
-                г. Киев, пр-т Леси Украинки, 26
-              </address>
-            </li>
-            <li>
-              <a href="mailto:info@example.com" class="podval-list reset-link">info@example.com</a>
-            </li>
-            <li>
-              <a href="tel:+380991111111" class="podval-list reset-link">+38 099 111 11 11</a>
-            </li>
-          </ul>
-        </div>
+      <div class="podval-container">
+        <ul class="podval-contacts reset-ul">
+          <li>
+            <address class="podval-addres reset-link">
+              г. Киев, пр-т Леси Украинки, 26
+            </address>
+          </li>
+          <li>
+            <a href="mailto:info@example.com" class="podval-list reset-link">info@example.com</a>
+          </li>
+          <li>
+            <a href="tel:+380991111111" class="podval-list reset-link">+38 099 111 11 11</a>
+          </li>
+        </ul>
       </div>
-    </footer>
-  </body>
+    </div>
+  </footer>
+</body>
+
 </html>
